fixed spacing

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -46,8 +46,8 @@ body {
   line-height: 90%;
   font-weight: 900;
   height: 80%;
-  left: 44%;
-  top: 29%;
+  left: 45%;
+  top: 29.5%;
   background-color: transparent;
   padding: 10px;
   position: absolute;
@@ -157,7 +157,7 @@ body {
 
 .name {
   position: relative;
-  width: 950px;
+  width: 1100px;
   height: 500px;
   right: 26%;
   align-items: center;
